# omega-graphics-project

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  AUTOM.build  AUTOMDEPS  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  deps.py  vc.bat
aqua/: AGENTS.md  AQUAEngineTransformationPlan.md  AUTOM.build  AUTOMDEPS  CMakeLists.txt  Doxyfile  README.md
aqua/.plans/: Phase-1-Dynamics-Math-Core.md  Phase-10-Fluids-Liquids-Gases.md  Phase-2-Collision-Shapes-Broadphase.md  Phase-3-Narrowphase-Contact-Solver.md  Phase-4-Joints-Queries-Sleeping.md  Phase-5-Compute-Execution-Substrate.md  Phase-6-Particle-Systems.md  Phase-7-Position-Based-Dynamics-Core.md  Phase-8-Cloth-Ropes-Hair.md  Phase-9-Deformable-Solids.md  Physics-Roadmap.md
aqua/cmake/: AquaGame.cmake
aqua/docs/: API.rst  AQUA-Design-Stub-to-Engine.md  AQUA-Implementation-Plan.md  About.rst  Android-Host-Integration-Plan.md  Phase-1-Dynamics-Math-Core.md  Phase-2-Collision-Shapes-Broadphase.md  Physics-Roadmap.md  Pipeline-Object-Scene-Plan.md  Vertical-Slice-Window-RenderTarget.md  conf.py  index.rst
aqua/editor/: EditorMain.cpp
aqua/engine/: AUTOM.build
aqua/src/: AQBodySoA.cpp  AQBodySoA.h  AQCollision.cpp  AQComputeBackend.cpp  AQComputeBackend.h  AQComputeParticles.cpp  AQComputeUtil.h  AQComputeXPBD.cpp  AQContext.cpp  AQGJK.cpp  AQJoint.cpp  AQJointBuild.h  AQNarrowphase.cpp  AQParticleCollision.h  AQParticleMath.h  AQQuery.cpp  AQQueryMath.h  AQSpace.cpp  AQSpaceImpl.h  AQSpaceParticles.cpp  AQSpaceXPBD.cpp  AQXPBDMath.h  App.cpp  Math.cpp  Object.cpp  Scene.cpp  World.cpp
aqua/tests/: BasicGame.cpp  CMakeLists.txt  aqua_broadphase_test.cpp  aqua_compute_test.cpp  aqua_contact_test.cpp  aqua_dynamics_test.cpp  aqua_exec_path_test.cpp  aqua_gpu_broadphase_test.cpp  aqua_gpu_integrate_test.cpp  aqua_gpu_narrowphase_test.cpp  aqua_gpu_particle_test.cpp  aqua_gpu_scan_test.cpp  aqua_gpu_solver_test.cpp  aqua_gpu_xpbd_test.cpp  aqua_math_test.cpp  aqua_particle_api_test.cpp  aqua_particle_pool_test.cpp  aqua_particle_sdf_test.cpp  aqua_particle_step_test.cpp  aqua_particle_test.cpp  aqua_phase4_test.cpp  aqua_rigid_body_test.cpp  aqua_xpbd_color_test.cpp  aqua_xpbd_coupling_test.cpp  aqua_xpbd_lra_test.cpp  aqua_xpbd_origin_test.cpp  aqua_xpbd_rope_test.cpp  aqua_xpbd_step_test.cpp
common/: .gitignore  AUTOM.build  AUTOMDEPS  CMakeLists.txt  Doxyfile  README.md
common/.plans/: AssetC-Extension-Plan.md  ImgCodec-API-Extension-Proposal.md  JSON-API-Completion-Plan.md  OmegaCommon-Async-WebSocket-Plan.md  OmegaCommon-Binary-Split-Plan.md  UniString-Universal-Conversion-Plan.md
common/assetc/: AssetTypes.json  assetc.h  main.cpp
common/cmake/: OmegaGraphicsSuite.cmake
common/docs/: App-Asset-Key-Pipeline-Plan.md  AssetC-Extension-Plan.md  Debuggable-Class-Formatting-Proposal.md  ImgCodec-API-Extension-Proposal.md  OmegaCommon-Completion-Plan.md  conf.py  index.rst
common/embedbin/: embedbin.cpp
common/include/: OmegaCommon.owrap
common/src/: Info.plist.in  assets.cpp  cli.cpp  crt.c  crypto.cpp  format.cpp  fs-unixother.cpp  fs-win.cpp  fs.cpp  json.cpp  multithread-unix.cpp  multithread-win.cpp  net-curl.cpp  net-unix.cpp  net-win.cpp  regex.cpp  utils.cpp
common/tests/: CMakeLists.txt  JSONConvertTest.cpp  JSONLifecycleTest.cpp  JSONLookupTest.cpp  JSONNumberTest.cpp  JSONParseResultTest.cpp
common/wrapgen/: README.md  ast.cpp  ast.h  diagnostics.cpp  diagnostics.h  gen_c.cpp  gen_go.cpp  gen_java.cpp  gen_python.cpp  gen_rust.cpp  gen_swift.cpp  lexer.cpp  lexer.h  nodes.def  parser.cpp  parser.h  toks.def  wrapper_gen.h
gte/: .gitignore  AUTOM.build  AUTOMDEPS  CMakeLists.txt  Doxyfile  EmbedOmegaSLLib.cmake  OmegaGTE.cmake  README.md
gte/.plans/: Allocator-Lifetime-Hardening-Plan.md  CommandQueue-Typed-Pool-Plan.md  D3D12-CPU-Accessible-Buffer-Plan.md  Debug-Layer-Plan.md  GESpace-Implementation-Plan.md  GPU-Commit-Timing-Plan.md  GTETestWindow-CrossBackend-Plan.md  KTX-Texture-Codec-Plan.md  Mesh-Shader-Implementation-Plan.md  OmegaSL-Emulation-Matrix.md  OmegaSL-Feature-Gap-Survey.md  OmegaSL-LSP-Plan.md  OmegaSL-Linker-And-Headers-Plan.md  OmegaSL-Reference.md  OmegaSL-Swizzle-Subgroup-Plan.md  Pipeline-Completion-Extension-Plan.md  PixelFormat-Completion-Plan.md  Raytracing-Full-Implementation-Plan.md  Shared-Descriptor-Heap-Plan.md  Sparse-Resources-SamplerFeedback-Plan.md  Super-Resolution-And-Frame-Generation-Plan.md  Triangulation-Engine-Completion-Plan.md  Vulkan-Graphics-Barrier-Rework-Plan.md  Vulkan-Video-Encode-Decode-Plan.md
gte/autom/: OmegaGTE.autom
gte/docs/: API.rst  About.rst  Building.rst  CommandQueue-Typed-Pool-Plan.md  D3D12MA-Integration-Plan.md  Debug-Layer-Plan.md  Debugging.rst  Direct-IO-Implementation-Plan.md  Emulation.rst  GEMesh-TextureAssets-Implementation-Plan.md  GTEDeviceFeatures-Extension-Plan.md  Limitations.rst  Mesh-Parser-Extension-Plan.md  Mesh-Shader-Implementation-Plan.md  Metal-Debug.md  OmegaGTE-Matrix-Extension-Plan.md  OmegaSL-5.3-Integer-Bitfield-Ops-Plan.md  OmegaSL-CodeGen-Target-Refactor-Plan.md  OmegaSL-Completion-Plan.md  OmegaSL-Feature-Gap-Survey.md  OmegaSL-Reference.md  OmegaSL-Swizzle-Subgroup-Plan.md  OmegaSL.rst  Path-AA-Skirt-Plan.md  Pipeline-Completion-Extension-Plan.md  Pipeline-State-Caching-Plan.md  Raytracing-Full-Implementation-Plan.md  RenderTarget-Queue-Decoupling-Plan.md  Sparse-Resources-SamplerFeedback-Plan.md  SwiftShader-CPU-Fallback-Plan.md  Tessellation-Texture-Attachments-Plan.md  Triangulation-CrossBackend-Migration-Plan.md  Triangulation-Engine-Completion-Plan.md  Triangulation-Texture-Attachments-Plan.md  conf.py  impl-std430-buffer-stride.md  index.rst  omegasl_highlight.py  texture-swizzle-proposal.md
gte/external-libs/: .gitignore
gte/include/: OmegaGTE.h  OmegaGTE.owrap  omegasl.h
gte/omegasl/: .gitignore  README.md  omegasl-lang.py  omegasl_lang.py
kreate/: .gitignore  AGENTS.md  AUTOM.build  AUTOMDEPS  CMakeLists.txt  Doxyfile  README.md
va/: AUTOM.build  AUTOMDEPS  CMakeLists.txt  README.md
wtk/: .gitignore  AUTOM.build  AUTOMDEPS  CMakeLists.txt  Doxyfile  README.md  TODO
(+1243 files in other folders)
